20-healthapp/deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-app
  namespace: iiot-poc
spec:
  replicas: 1
  selector: { matchLabels: { app: health-app } }
  template:
    metadata:
      labels: { app: health-app }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/health"
    spec:
      containers:
        - name: web
          image: python:3.11-alpine
          command: ["/bin/sh","-lc"]
          args:
            - |
              pip install --no-cache-dir flask && \
              python /app/app.py
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          volumeMounts:
            - name: appsrc
              mountPath: /app
      volumes:
        - name: appsrc
          configMap:
            name: healthapp-src
---
apiVersion: v1
kind: Service
metadata:
  name: health-app
  namespace: iiot-poc
spec:
  selector: { app: health-app }
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
