20-healthapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: iiot-poc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: salud-poc.emeday.inc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-app
                port:
                  number: 8080
